--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,13 +15,13 @@
   </script>
 </head>
 <body>
-<nav class='app-nav'>
+<!-- <nav class='app-nav'>
   <h1 class='logo'>
-    <%= link_to root_url do %>
+    <%#= link_to root_url do %>
       Chess<span class='logo-explained'>Explained</span>
-    <% end %>
+    <%# end %>
   </h1>
-</nav>
+</nav> -->
 <%= yield %>
 
 <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
