--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -14,6 +14,8 @@
 //= require jquery_ujs
 //= require modernizr.custom
 
+//= require modal
+
 //= require classie
 
 //= require spin
@@ -23,6 +25,7 @@
 //= require chessboard
 //= require chess
 //= require myChess
+
 
 // = require morph_button/morph_button
 
