updated variation modal

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,9 @@
 @import 'morph_button/content';
 @import 'morph_button/component';
 
+//Modal
+@import 'modal';
+
 //Chessboard
 @import 'chessboard';
 
