working on variation bug

--- a/app/views/games/_board_layout.html.erb
+++ b/app/views/games/_board_layout.html.erb
@@ -52,7 +52,7 @@
 
 
 
-<!-- <div class='pgn-conatiner'>
-  <ul id="pgn-master"></ul>
-</div> <!-- pgn-container -->
-
+<!--
+<div class='pgn-container'>
+          <ul id="pgn-variation"></ul>
+        </div> <!-- pgn-container -->
