--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,3 +8,13 @@
   <% end %>
   </ul>
 </div>
+
+<div id="board" style="width: 400px"></div>
+<p>Status: <span id="status"></span></p>
+<p>FEN: <span id="fen"></span></p>
+<p>PGN: <span id="pgn"></span></p>
+
+
+<script type="text/javascript">
+
+</script>
