deleting a lot of code and simplifying the interface

--- a/app/views/games/_board_layout.html.erb
+++ b/app/views/games/_board_layout.html.erb
@@ -41,6 +41,7 @@
 </div>
 
     <aside class="review-container">
+      <%= link_to "Done", "#", id: "finishVariation" %>
       <div id="variation">
         <div class='game-board' style="width: 600px;"></div>
       </div>
