fixed location hash on multiple web sockets

--- a/app/views/games/_board_layout.html.erb
+++ b/app/views/games/_board_layout.html.erb
@@ -41,8 +41,8 @@
 </div>
 
     <aside class="review-container">
-      <%= link_to "Done", "#", id: "finishVariation" %>
       <div id="variation">
+      <%#= link_to "Done", "#", class: "finishVariation" %>
         <div class='game-board' style="width: 600px;"></div>
       </div>
     </aside>
