--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,4 +1,7 @@
 <h1>Create a game room</h1>
+
+<%= link_to "Create game manually", games_url, method: 'post' %>
+
 <div class="mockup-content">
   <div class="morph-button morph-button-modal morph-button-modal-2 morph-button-fixed">
   <button type="button">Upload PGN</button>
@@ -22,4 +25,4 @@
     </div>
   </div>
 </div><!-- morph-button -->
-<%#= render 'form' %>
+
