hosting pieces on amazon s3

--- a/app/views/games/_board_layout.html.erb
+++ b/app/views/games/_board_layout.html.erb
@@ -42,7 +42,7 @@
 
     <aside class="review-container">
       <div id="variation">
-      <%#= link_to "Done", "#", class: "finishVariation" %>
+      <%= link_to "Done", "#", class: "finishVariation" %>
         <div class='game-board' style="width: 600px;"></div>
       </div>
     </aside>
