--- a/app/views/games/_board_layout.html.erb
+++ b/app/views/games/_board_layout.html.erb
@@ -42,11 +42,10 @@
 
     <aside class="review-container">
       <div id="variation">
-      <%= link_to "Done", "#", class: "finishVariation" %>
+        <%= link_to "Done with this variation", "#", class: "finishVariation" %>
         <div class='game-board' style="width: 600px;"></div>
       </div>
     </aside>
-
 </div>
 
 
