--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title>ChessExplained</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <%= yield :head %>
+  <script src='http://static.opentok.com/webrtc/v2.2/js/opentok.min.js'></script>
   <script>
     var MyChess = {};
     MyChess.config = {
