--- a/app/views/games/_board_layout.html.erb
+++ b/app/views/games/_board_layout.html.erb
@@ -31,6 +31,7 @@
 
     <% unless @not_review %>
       <section class="notes" id="notesSection">
+        <div id="videoPublisher"></div>
       <!--   <div class="note-form">
           <input type='text'>
           <%#= link_to "Submit", "#", id: "noteSubmit" %>
