--- a/app/assets/stylesheets/games/game_show.css.scss
+++ b/app/assets/stylesheets/games/game_show.css.scss
@@ -35,6 +35,7 @@
 
           a {
             @include hover-transition-all;
+            font-size: 16px;
             color: #ccc;
 
             &:hover {
