videochat UI better

--- a/app/views/games/_board_layout.html.erb
+++ b/app/views/games/_board_layout.html.erb
@@ -31,7 +31,8 @@
 
     <% unless @not_review %>
       <section class="notes" id="notesSection">
-        <div id="videoPublisher"></div>
+        <div id="youPublisher"></div>
+        <div id="guestPublisher"></div>
       </section>
     <% end %>
 </div>
