--- a/app/views/games/review.html.erb
+++ b/app/views/games/review.html.erb
@@ -4,5 +4,6 @@
   <script type="text/javascript">
     var sessionId = "<%= @room.sessionId %>";
     var token = "<%= @tok_token %>";
+    var userVideoName = "<%= current_user.email %>";
   </script>
 <% end %>
