--- a/app/views/games/_board_layout.html.erb
+++ b/app/views/games/_board_layout.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+
    <aside class="review-container hide">
       <div id="variation">
         <%= link_to "Done with this variation", "#", class: "finishVariation" %>
@@ -40,7 +41,7 @@
 
 
     <% unless @not_review %>
-      <section class="video-chat" id="notesSection">
+      <section class="vid-chat" id="notesSection">
         <div id="youPublisher"></div>
         <div id="guestPublisher"></div>
       </section>
