video testing with cian and scoop

--- a/app/views/games/_board_layout.html.erb
+++ b/app/views/games/_board_layout.html.erb
@@ -43,7 +43,7 @@
     <% unless @not_review %>
       <section class="vid-chat" id="notesSection">
         <div id="youPublisher"></div>
-        <div id="guestPublisher"></div>
+        <!-- <div id="guestPublisher"></div> -->
       </section>
     <% end %>
 
