--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -9,7 +9,7 @@
     </section>
 
     <section class="digital-upload-section">
-      <h2>Digital upload your game</h2>
+      <h2>Digitally upload your game</h2>
       <p class="explenation">
         If you have any form of PGN digitally, just copy and paste it into the box below, and we'll take care of it from there.
       </p>
