about to try channels

--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>All you have to do is upload a game</h1>
+  <h1>It only takes 1 step</h1>
 
   <div class="upload-options-container">
     <section class="manual-upload-section">
