--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,5 +24,8 @@
 <%= yield %>
 
 <%= javascript_include_tag "application" %>
+<script>
+  MyChess.dispatcher = new WebSocketRails(MyChess.config.websocketUrl, true);
+</script>
 </body>
 </html>
