--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
     <script src='http://static.opentok.com/webrtc/v2.2/js/opentok.min.js'></script>
   <% end %>
   <script>
-    var MyChess = {};
-    MyChess.config = {
+    var App = {};
+    App.config = {
       websocketUrl: "<%= request.host %>:<%= request.port %>/websocket" || "chess-explained.herokuapp.com/websocket",
       isGame: <%= current_page?(game_url(params[:id] || 1)) %> || <%= current_page?(review_game_url(params[:id] || 1)) %>,
       isReview: <%= current_page?(review_game_url(params[:id] || 1)) %>,
@@ -25,7 +25,8 @@
 
 <%= javascript_include_tag "application" %>
 <script>
-  MyChess.dispatcher = new WebSocketRails(MyChess.config.websocketUrl, true);
+  App.dispatcher = new WebSocketRails(App.config.websocketUrl, true);
+  App.config.engine = new Chess();
 </script>
 </body>
 </html>
