pushing before i hoop

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -23,7 +23,9 @@
 //= require websocket_rails/main
 //= require chessboard
 //= require chess
-//= require myChess
+
+//= require Game/myChess
+//= require Home/homeController
 
 //= documentReady
 //= require_tree .
