re did the clickable pgn

--- a/app/views/games/_board_layout.html.erb
+++ b/app/views/games/_board_layout.html.erb
@@ -28,6 +28,9 @@
           <% end %>
         </ul>
       </div> <!-- actual-board-container -->
+      <% @moves.each_with_index do |move, index| %>
+      <%= link_to move.notation, "#", class: 'game-move', data: {fen: move.fen, move_number: index + 1} %>
+    <% end %>
     </div> <!-- master -->
 
 
@@ -46,8 +49,6 @@
         <!-- <div id="guestPublisher"></div> -->
       </section>
     <% end %>
-
-
 <!--
 <div class='pgn-container'>
           <ul id="pgn-variation"></ul>
