--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -26,4 +26,8 @@
 
     </section>
   </div>
+  <section>
+    <textarea id="lichessUrl"></textarea>
+    <p><a href="#" id="lichessSubmit">LiChess Magic</a></p>
+  </section>
 </div>
