playing with jsonp request to lichess

--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -26,8 +26,8 @@
 
     </section>
   </div>
-  <section>
+  <!-- <section>
     <textarea id="lichessUrl"></textarea>
     <p><a href="#" id="lichessSubmit">LiChess Magic</a></p>
-  </section>
+  </section> -->
 </div>
