adding lichess feature slowly but surely

--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -14,7 +14,7 @@
         If you have any form of PGN digitally, just copy and paste it into the box below, and we'll take care of it from there.
       </p>
 
-      <%= form_tag games_url, method: 'post', id: "uploadPgn" do %>
+      <%= form_tag regular_upload_url, method: 'post', id: "uploadPgn" do %>
         <p><label>PGN <span>(Notes inside of the PGN will not work)</span></label><textarea placeholder="Example: 1. e4 e5 2. Bc4 Nc6 3. Qf3 Nd4 4. Qxf7#"></textarea></p>
         <button class="ladda-button spinner" data-style="expand-right" data-spinner-color="white">
           <span class="ladda-label">Submit</span>
@@ -26,8 +26,8 @@
 
     </section>
   </div>
-  <!-- <section>
+  <section>
     <textarea id="lichessUrl"></textarea>
     <p><a href="#" id="lichessSubmit">LiChess Magic</a></p>
-  </section> -->
+  </section>
 </div>
