--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
       isReview: <%= current_page?(review_game_url(params[:id] || 1)) %>,
       isHome: <%= current_page?(root_url) %>,
       gameId: <%= @game.try(:id) || "null" %>,
+      isNewGame: <%= current_page?(new_game_url) %>,
       channelName: channelNameVar
     }
   </script>
