visual variations almost done

--- a/app/views/games/_board_layout.html.erb
+++ b/app/views/games/_board_layout.html.erb
@@ -4,6 +4,7 @@
       <div id="variation">
         <%= link_to "Done with this variation", "#", class: "finishVariation" %>
         <span class='rewind'><%= link_to "Undo last move", "#" %></span>
+        <span class="save-variation"><%= link_to "Save this variation", "#" %></span>
         <div class='game-board' style="width: 600px;"></div>
       </div> <!-- variation -->
     </aside> <!-- review-container -->
