--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,28 @@
-<h2>Sign up</h2>
+<div class="container-sign-up">
+  <h2 class='sign-up-title'>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'devise-form'}) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+    <div class="fields-container">
+      <div><%#= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true, placeholder: "Email" %></div>
 
-  <div><%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+      <div><%#= f.label :password %><br />
+        <%= f.password_field :password, autocomplete: "off", placeholder: "Password" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+      <div><%#= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Confirm that password for me" %></div>
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <div class='submit-container'>
+      <%= f.submit "Sign up" %>
+    </div>
+  <% end %>
+
+  <%#= render "devise/shared/links" %>
+  <div class="sign-up-sign-in-container">
+    <small>I already have an account, I'd like to <%= link_to "sign in", new_user_session_url %>.</small>
+  </div>
+</div>
