--- a/app/assets/stylesheets/games/new_game.css.scss
+++ b/app/assets/stylesheets/games/new_game.css.scss
@@ -3,10 +3,11 @@
   margin: 0 auto;
 
   h1 {
-    font-size: 36px;
+    font-size: 32px;
     text-align: center;
-    font-weight: 200;
-    margin: 50px 0;
+    border-bottom: 1px solid darkgray;
+    padding: 5px 0;
+    font-weight: 800;
   }
 
   .upload-options-container {
@@ -14,29 +15,43 @@
     background-color: #ccc;
     font-size: 0;
     padding: 50px;
-
-    :after {
-      // content:"";
-      // position: absolute;
-      // z-index: -1;
-      // top: 0;
-      // bottom: 0;
-      // left: 50%;
-      // border-left: 2px dotted #ff0000;
-    }
+    margin-top: 20px;
+    width: 65%;
+    display: inline-block;
+    vertical-align: top;
 
     section {
       vertical-align: top;
       display: inline-block;
-      width: 50%;
+      width: 95%;
       padding: 0 15px;
-      height: 400px;
+      @extend %group;
 
       p {
         font-size: 18px;
         text-align: left;
         padding: 20px 0;
         line-height: 1.5;
+      }
+
+      aside {
+        font-size: 18px;
+        text-align: left;
+        padding: 20px 0;
+        line-height: 1.5;
+
+        p {
+          display: block;
+          font-weight: 200;
+
+          span {
+             -moz-border-radius: 15px;
+              border-radius: 15px;
+              padding: 5px;
+              border: 1px solid #2980b9;
+              background-color: white;
+          }
+        }
       }
 
       h2 {
@@ -54,10 +69,28 @@
         }
       }
 
-      textarea {
+      input {
         width: 100%;
-        height: 150px;
         margin: 5px 0;
+        color: black;
+        padding: 5px;
+        border-radius: 5px;
+
+        -webkit-transition: all 0.30s ease-in-out;
+        -moz-transition: all 0.30s ease-in-out;
+        -ms-transition: all 0.30s ease-in-out;
+        -o-transition: all 0.30s ease-in-out;
+        outline: none;
+        padding: 3px 0px 3px 3px;
+        margin: 5px 1px 3px 0px;
+        border: 1px solid #DDDDDD;
+
+        &:focus {
+          box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+          padding: 3px 0px 3px 3px;
+          margin: 5px 1px 3px 0px;
+          border: 1px solid rgba(81, 203, 238, 1);
+        }
       }
     }
 
